@@ -44,6 +44,7 @@ Version 0.3.beta1
 - Improved: Related products & quick products now use the product tree and allow for variant selection
 - Improved: All product collections can be printed to HTML/PDF
 - Improved: Addresses are now linked to the store config ID
+- Improved: Drag & Drop of product sorting in categories
 - Fixed start & stop publishing dates not working
 - Fixed Authorize.net failed transaction bug
 - Fixed enter key trapping on checkout payment method
